--- a/package.json
+++ b/package.json
@@ -21,29 +21,28 @@
     "@angular/platform-browser-dynamic": "4.0.2",
     "@angular/router": "4.0.2",
     "angular-in-memory-web-api": "^0.3.1",
-    "angular2-in-memory-web-api": "0.0.21",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
+    "core-js": "2.4.1",
     "ngx-bootstrap": "^1.6.6",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "rxjs": "5.3.0",
+    "ts-helpers": "1.1.2",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
+    "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "4.0.2",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "2.5.47",
     "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
+    "codelyzer": "2.1.1",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.1.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "jasmine-spec-reporter": "3.3.0",
+    "karma": "1.6.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.1.0",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-remap-istanbul": "0.6.0",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
